[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/enemy_robot/robot.png" type="Texture" id=1]
[ext_resource path="res://scenes/Robot.gd" type="Script" id=2]
[ext_resource path="res://sounds/tiro.wav" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
resource_name = "default"
length = 5.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 4.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 6 ), Vector2( 0, -6 ), Vector2( 0, 6 ), Vector2( 0, -6 ), Vector2( 0, 0 ) ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 4.0

[sub_resource type="CircleShape2D" id=3]
radius = 6.5

[node name="Robot" type="KinematicBody2D" groups=["Robot"]]
position = Vector2( 65, 67 )
script = ExtResource( 2 )

[node name="fireTimer" type="Timer" parent="."]
wait_time = 0.6
autostart = true

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
autostart = true

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 6.0

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1, -1 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="RobotHazardArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RobotHazardArea"]
shape = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -2.26498e-06, 1.66893e-06 )
scale = Vector2( 0.5, 0.5 )

[node name="tiro" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -20.0

[connection signal="timeout" from="fireTimer" to="." method="_on_fireTimer_timeout"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="area_entered" from="RobotHazardArea" to="." method="_on_HazardArea_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
